[package]
name = "thumbnail"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.8", default-features = false, features = [
    "png",
    "jpeg",
] }

[profile.release]
opt-level = "z"  # Optimiza para tamaño en lugar de velocidad
lto = true       # Habilita Link-Time Optimization
codegen-units = 1 # Reduce paralelismo para mejor optimización
strip = true     # Elimina símbolos de depuración

[[bin]]
name = "thumbnail"
path = "src/main.rs"